--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font: 14px "Century Gothic", Futura, sans-serif;
+  margin: 20px;
+  height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ol, ul {
+  padding-left: 30px;
 }
+
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.status {
+  margin-bottom: 20px;
+  color:steelblue;
+  font-weight: bold;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.square {
+  background: transparent;
+  border: 5px solid black;
+  float: left;
+  font-size: 300px;
+  font-weight: bold;
+  line-height: 30px;
+  height: 300px;
+  width: 300px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+}
+
+.square:focus {
+  outline: none;
+}
+
+.square:hover {
+  outline: none;
+  border: 5px solid steelblue;
+}
+
+.kbd-navigation .square:focus {
+  background: transparent;
+}
+
+.game {
+  display: flex;
+  flex-direction: row;
+}
+
+.game-info {
+  margin-left: 20px;
+}
+
+.button {
+  background-color: steelblue;
+  color: white;
+  padding: 2rem;
+  font-size: 20px;
+  border: none;
+}
+
